test_regress/t/t_randsequence.out
%Error-UNSUPPORTED: t/t_randsequence.v:23:7: Unsupported: randsequence
   23 |       randsequence(main)
      |       ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randsequence.v:40:7: Unsupported: randsequence
   40 |       randsequence(main)
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:51:7: Unsupported: randsequence
   51 |       randsequence()
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:58:7: Unsupported: randsequence
   58 |       randsequence()
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:65:10: Unsupported: randsequence
   65 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:79:10: Unsupported: randsequence
   79 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:81:21: Unsupported: randsequence if
   81 |             one_if: if (i % 10 == 0) count_1 else most;
      |                     ^~
%Error-UNSUPPORTED: t/t_randsequence.v:87:19: Unsupported: randsequence case
   87 |             most: case (i % 10)
      |                   ^~~~
%Error-UNSUPPORTED: t/t_randsequence.v:103:10: Unsupported: randsequence
  103 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:105:21: Unsupported: randsequence if
  105 |             one_if: if (i % 10 == 0) count_1 else most;
      |                     ^~
%Error-UNSUPPORTED: t/t_randsequence.v:111:19: Unsupported: randsequence case
  111 |             most: case (i % 10)
      |                   ^~~~
%Error-UNSUPPORTED: t/t_randsequence.v:126:7: Unsupported: randsequence
  126 |       randsequence(main)
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:127:16: Unsupported: randsequence repeat
  127 |          main: repeat(10) count_1;
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:135:10: Unsupported: randsequence
  135 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:147:10: Unsupported: randsequence
  147 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:152:10: Unsupported: randsequence
  152 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:167:10: Unsupported: randsequence
  167 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:185:10: Unsupported: randsequence
  185 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence.v:202:10: Unsupported: randsequence
  202 |          randsequence(main)
      |          ^~~~~~~~~~~~
%Error: Exiting due to
